--- a/index.html
+++ b/index.html
@@ -8,9 +8,22 @@
 
     <title>Bootstrap</title>
 </head>
-<body>
-    <h1>hello world</h1>
+<body class="container">
+    <h1>Playing with bootstrap</h1>
+    <div class="row row">
+        <div class="col col-lg-4 col-sm-12">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto ipsa sit praesentium. Tempore neque optio dignissimos alias fugiat! Necessitatibus suscipit quo cum dolores assumenda ut rerum autem quod expedita earum labore molestiae ipsa magnam consequuntur quasi eaque vitae cupiditate quaerat iure dolor, nisi dicta modi tempore maiores. Fuga voluptatibus quod impedit expedita cum excepturi tempora dolorem pariatur facilis nihil accusantium sit reprehenderit at ex et atque, tempore nisi exercitationem commodi minus! Nam, deserunt at! Nobis atque voluptatem, est ut aut voluptates eaque soluta, suscipit veniam, dolorem sapiente omnis natus quam.</p>
+        </div>
+        <div class="col col-lg-4 col-sm-12">
+            <img src="th.jpg" alt="">
+        </div>
+        <div class="col col-lg-4 ">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate praesentium debitis unde totam ratione odio asperiores doloremque omnis accusamus nihil facilis quia blanditiis eaque culpa, ipsum voluptatum neque aliquam iste consequatur sed id illo provident itaque quas. Praesentium, facilis illo ex enim delectus sequi? Qui, omnis ea vitae minus, ratione aperiam saepe neque in labore, recusandae dolores nisi nihil maiores?</p>
+        </div>
 
+    </div>
+    
+    
 
 
 
